dev: fixed template editor too wide to fit

--- a/styles/adminstyle.css
+++ b/styles/adminstyle.css
@@ -124,3 +124,9 @@ div.ui-jqgrid-hbox input, div.ui-jqgrid-hbox input{
     height: 4em;
     overflow: hidden;
 }
+
+.templateeditor {
+    float:left;
+    width:70%; 
+    padding:1em;
+}
